# kinder-intent-lab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md
backend/: alembic.ini  dev-backend.mjs  pyproject.toml
backend/app/: main.py
backend/app/aggregator/: __init__.py  aggregator.py  review.py  state_machine.py
backend/app/api/: __init__.py  arena_ops.py  dashboard.py  gym.py  infer.py  observatory.py  ontology_admin.py  review.py  situation_seeds.py
backend/app/arena/: __init__.py  baseline.py  gate.py  ktib.py  metrics.py  persona.py  reflect.py  runner.py  stages.py
backend/app/arena/prompts/: __init__.py  zero_shot.md
backend/app/brain/: __init__.py  backfill.py  decision.py  diagnosis.py  fast_update.py  inference.py  priors.py  promote.py  version_gate.py
backend/app/brain/prompts/: __init__.py  scorer.md
backend/app/contracts/: __init__.py  base.py  brain_node.py  challenge_pack.py  confusion_edge.py  episode.py  evidence.py  infer_request.py  infer_response.py  observatory.py  visual_semantics.py
backend/app/core/: config.py  datasets.py  db.py  ontology.py  risk_model.py
backend/app/foundry/: __init__.py  atlas.py  atlas_ingest.py  batch.py  campaign.py  episode_builder.py  expert_ingest.py  persona.py  persona_source.py  pilot.py  seed_expansion.py  situation_seeds.py
backend/app/foundry/agents/: __init__.py  runner.py
backend/app/foundry/prompts/: __init__.py  s10_consensus.md  s3_extractor.md  s4_language_miner.md  s5_situation_builder.md  s6_simulator.md  s7_analyst.md  s8_skeptic.md  s9_judge.md
backend/app/foundry/stages/: __init__.py  s10_consensus.py  s1_discovery.py  s2_governance.py  s3_extractor.py  s4_language_miner.py  (+5 more)
backend/app/gym/: __init__.py  challenge.py  evidence.py  growth.py  live.py  pack.py  session.py
backend/app/llm/: __init__.py  anthropic_provider.py  base.py  client.py  mock.py  openai_embedding_provider.py
backend/app/models/: __init__.py  arena.py  base.py  benchmark_candidates.py  brain.py  episodes.py  foundry.py  governance.py  guards.py  gym.py  intent_admin.py  persona.py
backend/app/observatory/: __init__.py  aggregate.py
backend/tests/: arena_helpers.py  brain_helpers.py  conftest.py  test_agents_runner.py  test_aggregator.py  test_ambiguity_report.py  test_anthropic_provider.py  test_arena_baseline.py  test_arena_gate.py  test_arena_metrics.py  test_arena_ops_api.py  test_arena_persona.py  test_arena_reflect.py  test_arena_runner.py  test_atlas.py  test_atlas_pipeline.py  test_batch.py  test_benchmark_candidates.py  test_benchmark_isolation.py  test_brain_backfill.py  test_campaign.py  test_challenge_pack.py  test_click_to_train_e2e.py  test_config.py  test_contracts.py  test_dashboard_api.py  test_db_constraints.py  test_decision.py  test_diagnosis.py  test_e2e_trace_0_to_9.py  test_expert_ingest.py  test_fast_update.py  test_foundry_s1_s2.py  test_foundry_s3_s5.py  test_foundry_s6_s10.py  test_gym.py  test_gym_api.py  test_gym_live.py  test_healthz.py  test_human_review.py  (+22 more)
(+230 files in other folders)
