[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kinder-intent-backend"
version = "0.1.0"
description = "Kinder Intent Brain — backend (Foundry / Seed Brain / Gym / Observatory / Arena)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "scikit-learn>=1.5",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "jsonschema>=4.18",
]
# 실 Claude completion provider (LLM_PROVIDER=anthropic). 지연 import라 미설치 mock 환경엔 불필요.
anthropic = [
    "anthropic>=0.40",
]
# 실 OpenAI 임베딩 provider (EMBEDDING_PROVIDER=openai). text-embedding-3-* → 1536차원.
openai = [
    "openai>=1.40",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# FastAPI 라우터는 Depends()를 인자 기본값으로 쓰는 게 표준 관용구 (B008 오탐)
"app/api/*" = ["B008"]
